--- a/style.css
+++ b/style.css
@@ -31,3 +31,16 @@
   position: relative;
   display: inline-block;
 }
+
+
+
+.posted-date {
+  position: absolute;
+  bottom: 50%;
+  right: 0;
+  margin: 0;
+  color: rgb(237, 230, 230); 
+  background-color: rgba(0, 0, 0, 0.7); 
+  padding: 2px;
+  border-radius: 5px;
+}
